deploy-wp-veritas.yaml
# 
# Deployment for wp-veritas (without mongodb because we get it as a service)
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    date: 2019-03-11 13:29
    deployment.kubernetes.io/revision: '5'
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s-2.yml
    kompose.version: 1.17.0 (a74acad)
    version: 0.0.5
  labels:
    app: wp-veritas
    author: gcharmier
    team: idev-fsd
    version: 0.0.5
  name: wp-veritas
  namespace: wwp-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp-veritas
  template:
    metadata:
      labels:
        app: wp-veritas
        author: gcharmier
        team: idev-fsd
        deployment: wp-veritas
    spec:
      containers:
        - env:
            - name: MONGO_URL
              valueFrom:
                secretKeyRef:
                  key: mongo-url
                  name: wp-veritas
            - name: PORT
              value: '3000'
            - name: ROOT_URL
              value: 'https://wp-veritas.128.178.222.83.nip.io/'
            # - name: ROOT_URL
            #   value: 'https://wp-veritas.epfl.ch/'
          image: 'epflsi/wp-veritas:0.1.10'
          imagePullPolicy: IfNotPresent
          name: pod-wp-veritas
          ports:
            - containerPort: 3000
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
